dictdataeneudir = $(pkgdatadir)/dict/en-eu
dictdataeneu_DATA = eneu_chunk_type.txt \
                    eneu_mur.xml \
                    eneu_prep.txt \
                    eu_changes_morph.xml \
                    eu_changes_sint.txt \
                    eu_measures_gen.xml \
                    eu_morph_gen_mur.xml \
                    eu_morph_nolex.xml \
                    eu_sem.txt \
                    eu_verb_noum_subcat.txt \
                    eu_verb_subcat.txt
