dictdataeseudir = $(pkgdatadir)/dict/es-eu
dictdataeseu_DATA = eseu_chunk_type.txt \
                    eseu_mur.xml \
                    eseu_lex.txt \
                    eseu_prep.txt \
                    eu_changes_morph.xml \
                    eu_changes_sint.txt \
                    eu_measures_gen.xml \
                    eu_morph_gen_mur.xml \
                    eu_morph_nolex.xml \
                    eu_sem.txt \
                    eu_verb_noun_subcat.txt \
                    eu_verb_subcat.txt
