SUBDIRS = chunker dep nec

freelingendir = $(pkgdatadir)/freeling/en
freelingen_DATA = constr_gram.dat \
                  dicc.src.gz \
                  grammar.dat \
                  heufull.dat \
                  locucions.dat \
                  moneda.dat \
                  moneda-TODO.dat \
                  np.dat \
                  probabilitats.dat \
                  quantities.dat \
                  senses16.src \
                  splitter.dat \
                  sufixos.dat \
                  tagger.dat \
                  tokenizer.dat
