SUBDIRS = chunker dep nec corrector

freelingendir = $(pkgdatadir)/freeling/en
freelingen_DATA = constr_gram.dat \
                  dicc.src.gz \
                  heufull.dat \
                  locucions.dat \
                  moneda.dat \
                  moneda-TODO.dat \
                  np.dat \
                  probabilitats.dat \
                  quantities.dat \
                  senses16.src \
                  splitter.dat \
                  afixos.dat \
                  tagger.dat \
                  tokenizer.dat
