SUBDIRS = chunker corrector dep nec ner

freelingendir = $(pkgdatadir)/freeling/en
freelingen_DATA = afixos.dat \
                  dicc.src \
                  heufull.dat \
                  locucions.dat \
                  moneda.dat \
                  moneda-TODO.dat \
                  np.dat \
                  probabilitats.dat \
                  quantities.dat \
                  senses30.src \
                  splitter.dat \
                  tagger.dat \
                  tokenizer.dat \
		  wsd.dat
