SUBDIRS = coref corrector dep nec ner

freelingesdir = $(pkgdatadir)/freeling/es
freelinges_DATA =  afixos.dat \
                   constr_gram.dat \
                   dicc.src \
                   grammar.dat \
                   grammar-dep.dat \
                   grammar-full.dat \
                   grammar.lemastemp \
                   locucions.dat \
                   np.dat \
                   probabilitats.dat \
                   quantities.dat \
                   senses30.src \
                   splitter.dat \
                   tagger.dat \
                   tags.dat \
                   tokenizer.dat \
                   wsd.dat
