SUBDIRS = chunker corrector dep nec ner

freelingesdir = $(pkgdatadir)/freeling/es
freelinges_DATA =  afixos.dat \
                   constr_gram.dat \
                   dicc.src \
                   locucions.dat \
                   np.dat \
                   probabilitats.dat \
                   quantities.dat \
		   semdb.dat \
                   senses30.src \
                   splitter.dat \
                   tagger.dat \
                   tags.dat \
                   tokenizer.dat
