gramdataeneudir = $(pkgdatadir)/gram/en-eu
gramdataeneu_DATA = eneu_verb_transfer.foma \
                    eu_interchunk_order.dat \
                    eu_intrachunk_order.dat \
		    generation_move.dat \
                    eu_morph_preproc.dat \
                    interchunk_move1.dat \
                    interchunk_move2.dat \
                    interchunk_move3.dat \
                    intrachunk_move.dat
