gramdataeseudir = $(pkgdatadir)/gram/es-eu
gramdataeseu_DATA = eseu_verb_transfer.fst \
                    eu_interchunk_order.dat \
                    eu_intrachunk_order.dat \
                    eu_morph_preproc.dat \
                    interchunk_move1.dat \
                    interchunk_move2.dat \
                    interchunk_move3.dat \
                    intrachunk_move.dat
