freelingenchunkerdir = $(pkgdatadir)/freeling/en/chunker
freelingenchunker_DATA = appendix.PRP \
                         conjuncions.dat \
                         dicc.vbmodals \
                         grammar.dat \
                         grammar-dep.dat \
                         list.PDTssg \
                         nexes.mixtos \
                         nexes.parentetics \
                         nexes.preposicionals \
                         nexes.subordinants \
                         ph-about.dat\
                         ph-across.dat\
                         ph-after.dat\
                         ph-ahead.dat\
                         ph-along.dat\
                         ph-around.dat\
                         ph-as.dat\
                         ph-at.dat\
                         ph-away.dat\
                         ph-back.dat\
                         ph-by.dat\
                         ph-down.dat\
                         ph-for.dat\
                         ph-forward.dat\
                         ph-in.dat\
                         ph-into.dat\
                         ph-of.dat\
                         ph-off.dat\
                         ph-on.dat\
                         ph-onto.dat\
                         ph-out.dat\
                         ph-over.dat\
                         ph-still.dat\
                         ph-through.dat\
                         ph-to.dat\
                         ph-together.dat\
                         ph-under.dat\
                         ph-up.dat\
                         ph-upon.dat\
                         ph-with.dat\
                         ph-without.dat\
                         sn-chunkPRP.data \
                         sn-chunkPRPsdet.data \
                         WH-words.dat
