freelingesdepdir = $(pkgdatadir)/freeling/es/dep
freelingesdep_DATA = adv-espec-verbs-es.dat \
                     dependences.dat \
                     marq-disc-es.dat \
                     nom-prep-a-es.dat \
                     nom-prep-ante-es.dat \
                     nom-prep-bajo-es.dat \
                     nom-prep-con-es.dat \
                     nom-prep-contra-es.dat \
                     nom-prep-de-es.dat \
                     nom-prep-desde-es.dat \
                     nom-prep-durante-es.dat \
                     nom-prep-en-es.dat \
                     nom-prep-entre-es.dat \
                     nom-prep-hacia-es.dat \
                     nom-prep-hasta-es.dat \
                     nom-prep-mediante-es.dat \
                     nom-prep-para-es.dat \
                     nom-prep-por-es.dat \
                     nom-prep-sin-es.dat \
                     nom-prep-sobre-es.dat \
                     nom-prep-tras-es.dat \
                     verbs-1prep-es.dat \
                     verbs-2prep-es.dat \
                     verbs-atrib-es.dat \
                     verbs-ditr-es.dat \
                     verbs-imper-es.dat \
                     verbs-intr-es.dat \
                     verbs-iobj-es.dat \
                     verbs-mov-es.dat \
                     verbs-pred-es.dat \
                     verbs-prep-acerca-es.dat \
                     verbs-prep-a-es.dat \
                     verbs-prep-ante-es.dat \
                     verbs-prep-con-es.dat \
                     verbs-prep-contra-es.dat \
                     verbs-prep-de-es.dat \
                     verbs-prep-desde-es.dat \
                     verbs-prep-en-es.dat \
                     verbs-prep-entre-es.dat \
                     verbs-prep-hacia-es.dat \
                     verbs-prep-hasta-es.dat \
                     verbs-prep-para-es.dat \
                     verbs-prep-por-es.dat \
                     verbs-prep-sin-es.dat \
                     verbs-prep-sobre-es.dat \
                     verbs-prep-tras-es.dat \
                     verbs-que-es.dat \
                     verbs-trans-es.dat

